--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 data/raw_data/hsls_09/*.csv
 data/raw_data/els_02/*.csv
+data/raw_data/hsls_09/*.zip
+data/raw_data/els_02/*.zip
 data/processed_data/
