--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,4 @@
-matplotlib==3.10.0
-jupyter==1.1.1
-ipykernel==6.29.5
-pandas==2.2.3
-numpy==2.2.2
-Faker==37.1.0
+streamlit==1.33.0
+pandas==2.2.1
+numpy==1.26.4
+plotly==5.19.0
